Editing: wrong text position when you click enter on the text behind the image https://bugs.webkit.org/show_bug.cgi?id=115023

Reviewed by Ryosuke Niwa.

Source/WebCore:

When trying to break a line after an image followed by some text, contrary
to the expected behavior the text doesn't move to a new line, instead, the
caret position just shifts to the end of line.

As per the existing implementation for inserting a paragraph separator,
the insertion position obtained corresponds to the point after the image
element.
Since the insertion position doesn't resolve to being offset in the
following text node (0 offset), no splitting of text occurs and the block
to be inserted is placed after the containing (start) block (thereby
causing the caret position to shift).

If the computed insertionPosition points to an element that shall be
ignored for editing purposes (i.e. cannot have a VisiblePosition inside
it), and the position lies either at the start or at the end of such
an element, we should move our Position either upstream or
downstream (respectively) so as to obtain a valid position which can
be used further for splitting of the text.

Test: editing/inserting/insert-paragraph-after-non-editable-node-before-text.html

* editing/InsertParagraphSeparatorCommand.cpp:
(WebCore::InsertParagraphSeparatorCommand::doApply):
Moving the insertionPosition either upstream or downstream, if the point
lies either at the start or at the end of the anchor node.
The ensuing position, if a text node, can then be used for splitting of
the text correctly.

LayoutTests:

* editing/inserting/insert-paragraph-after-non-editable-node-before-text-expected.txt: Added.
* editing/inserting/insert-paragraph-after-non-ediatble-node-before-text.html: Added.
Layout test added for verifying the insert paragraph behavior between an inline node
which is ignored for editing purposes and some text.


Canonical link: https://commits.webkit.org/135807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151604 268f45cc-cd09-0410-ab3c-d52691b4dbfc